--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,23 @@
     "wpscholar/url": "^1.1"
   },
   "require-dev": {
-    "wpscholar/phpcs-standards-wpscholar": "@stable"
+    "wpscholar/phpcs-standards-wpscholar": "@stable",
+    "wp-cli/wp-cli-bundle": "@stable"
   },
   "scripts": {
-    "fix": "vendor/bin/phpcbf . -s",
-    "lint": "vendor/bin/phpcs . -s"
+    "fix": [
+      "vendor/bin/phpcbf ."
+    ],
+    "i18n": [
+      "vendor/bin/wp i18n make-pot . ./languages/simple-website-redirect.pot --headers='{\"POT-Creation-Date\":null}'"
+    ],
+    "lint": [
+      "vendor/bin/phpcs . -s"
+    ]
   },
   "scripts-descriptions": {
     "fix": "Automatically fix coding standards issues where possible.",
+    "i18n": "Generate a .pot file for translation.",
     "lint": "Check files against coding standards."
   }
 }
