--- a/.github/workflows/upload-asset-on-release.yml
+++ b/.github/workflows/upload-asset-on-release.yml
@@ -66,7 +66,7 @@ jobs:
             ${{ runner.os }}-composer-
 
       - name: Install PHP Dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest --no-dev --optimize-autoloader
+        run: composer install --prefer-dist --no-progress --no-dev --optimize-autoloader
 
       - name: Remove development files
         run: .github/scripts/cleanup.sh
