--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
+    "php": ">=7.4",
     "wpscholar/url": "^1.1",
     "wp-cli/entity-command": "^2.7"
   },
@@ -36,6 +37,9 @@
   "config": {
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
+    },
+    "platform": {
+      "php": "7.4.0"
     }
   }
 }
