--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   ],
   "require": {
     "php": ">=7.4",
-    "wpscholar/url": "^1.1",
-    "wp-cli/entity-command": "^2.7"
+    "wpscholar/url": "^1.1"
   },
   "require-dev": {
     "wpscholar/phpcs-standards-wpscholar": "@stable",
